--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
     <!--Social Media-->
     <div class="container-fluid pt-5 pb-5 kontak">
       <div class="container">
-        <h2 class="graytext" id="portofolio">Coba</h2>
-        <h2 class="display-3 text-center" id="socialmedia">Contact Me</h2>
+        <h2 class="graytext" id="socialmedia">Coba</h2>
+        <h2 class="display-3 text-center" >Contact Me</h2>
         <p class="text-center">
           Don't hesitate to get in touch. We're available to help. Reach us through the provided contact details for prompt assistance and support
         </p>
